DF/kubernetes/deploymentservice.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ct001-ta-df-generator
  namespace: ct001-ta-df-v1
  labels:
    app: ct001-ta-df-generator
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: ct001-ta-df-generator
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: ct001-ta-df-generator
    spec:
      containers:
      - name: ct001-ta-df-generator-backend-container
        image: 192.168.2.34:5000/ct001-ta-df-v1:docker_tag
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 3000
        

---
apiVersion: v1
kind: Service
metadata:
  name: ct001-ta-df-generator
  namespace: ct001-ta-df-v1
  labels:
    app: ct001-ta-df-generator
spec:
  selector:
    app: ct001-ta-df-generator
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
    - name: https
      protocol: TCP
      port: 443
      targetPort: 3000
  type: ClusterIP
