DF/kubernetes/gateway-df-ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ct001-ta-df-generator-httproute
  namespace: ct001-ta-df-v1
spec:
  parentRefs:
    - name: tgatest-gw
      namespace: kgateway-system
      sectionName: https  
  hostnames:
    - "tgatest910.toruslowcode.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /ct001/tam/ta/v1/api/
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: ct001-ta-df-generator
          port: 443 
          
      timeouts:
        request: 600s  
    - matches:
        - path:
            type: Exact
            value: /ct001/tam/ta/v1/api     
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplaceFullPath
              replaceFullPath: /
      backendRefs:
        - name: ct001-ta-df-generator
          port: 443

      timeouts:
        request: 600s
